--- a/flightreservation/src/main/resources/application.properties
+++ b/flightreservation/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/RESERVATION
-spring.datasource.username=root
-spring.datasource.password=akshay
+spring.datasource.url=jdbc:mysql://localhost:3306/reservation
+spring.datasource.username=admin
+spring.datasource.password=
 
 server.servlet.context-path=/flightReservation
 
