--- a/flightreservation/pom.xml
+++ b/flightreservation/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.akshay.flightreservation</groupId>
 	<artifactId>flightreservation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>flightreservation</name>
 	<description>Flight Reservation Application</description>
