--- a/flightreservation/src/main/resources/application.properties
+++ b/flightreservation/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/jsps/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/reservation
+spring.datasource.url=jdbc:mysql://mysql-docker-container:3306/reservation
 spring.datasource.username=root
 spring.datasource.password=akshay
 
@@ -21,4 +21,3 @@ com.akshay.flightreservation.itinerary.dirpath=/home/akshay/gitRepos/flightSprin
 com.akshay.flightreservation.email.subject=Itinerary for your Flight
 com.akshay.flightreservation.email.body=Please find your itinerary attached
 
-server.port=9090
