--- a/flightreservation/pom.xml
+++ b/flightreservation/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>2.0.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
